Fixed password char jump bug.

--- a/style.css
+++ b/style.css
@@ -400,8 +400,8 @@
     border:1px solid rgba(0,0,0,0.1);
 	border-right:1px solid white;
 	border-radius:4px 0 0 4px;
-	letter-spacing: 4px;
-	font-size: 7px;
+	letter-spacing: 2px;
+	font-size: 9px;
     padding-top: 0px;
     padding-bottom: 0px;
 }
@@ -411,7 +411,7 @@
     min-height: 18px;
     background-color:white;
     border:1px solid #2ca7f8;
-	font-size: 7px;
+	font-size: 9px;
     padding-top: 1px;
     padding-bottom: 1px;
 }
@@ -423,7 +423,7 @@
     border:1px solid rgba(0,0,0,0.1);
 	border-right:1px solid white;
 	border-radius:4px 0 0 4px;
-	letter-spacing: 0px;
+	letter-spacing: 2px;
 	font-size: 9px;
     padding-top: 0px;
     padding-bottom: 0px;
